clusters/obs-w/platform/services/thanos-query-route/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: thanos-query
  namespace: observability
  labels:
    platform.garys-lab.io/cluster: obs-w
    platform.garys-lab.io/managed-by: ansible-platform-bootstrap
spec:
  gateways:
    - istio-ingress/workload-ingress
  hosts:
    - "thanos.obs-w.int.garys-lab.io"
  http:
    - route:
        - destination:
            host: thanos-query.observability.svc.cluster.local
            port:
              number: 9090
